--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    aaptOptions {
+        cruncherEnabled = false
     }
 }
 
@@ -30,6 +35,7 @@ dependencies {
     //firebase
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
