--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:extractNativeLibs="false"
+        android:hardwareAccelerated="true">
         <!--This meta-data tag is required to use Google Play services.-->
         <meta-data android:name="com.google.android.gms.version"
                    android:value="@integer/google_play_services_version" />
